Axe issue fix: contrast on header paragraph

--- a/_sass/objects/_header.scss
+++ b/_sass/objects/_header.scss
@@ -9,7 +9,7 @@ header {
 		
 		padding-top: 0;
 		margin: .5em auto 0 auto;
-		color: lighten($dark-gray, 20);
+		color: lighten($dark-gray, 15);
 		font-style: italic;
 
 		@media screen and (min-width: $bp-xsmall) {
